--- a/RhythmicRealm/RhythmicRealm.UI/RhythmicRealm.UI.csproj
+++ b/RhythmicRealm/RhythmicRealm.UI/RhythmicRealm.UI.csproj
@@ -10,6 +10,8 @@
     
     <PackageReference Include="AlertifyJS" Version="1.13.1" />
     
+    <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
+    
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.16">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
