--- a/RhythmicRealm/RhythmicRealm.UI/appsettings.json
+++ b/RhythmicRealm/RhythmicRealm.UI/appsettings.json
@@ -9,5 +9,12 @@
   "ConnectionStrings": {
     "SqlServerConnection": "",
     "SqliteConnection": "Data Source=RhythmicRealm.sqlite"
+  },
+  "EmailSender": {
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "EnableSSL": true,
+    "UserName": "pinarwissen@hotmail.com",
+    "Password": "192837!.+"
   }
 }
