--- a/RhythmicRealm/RhythmicRealm.UI/appsettings.json
+++ b/RhythmicRealm/RhythmicRealm.UI/appsettings.json
@@ -14,7 +14,7 @@
     "Host": "smtp.office365.com",
     "Port": 587,
     "EnableSSL": true,
-    "UserName": "pinarwissen@hotmail.com",
-    "Password": "192837!.+"
+    "UserName": "RhythmicRealm@hotmail.com",
+    "Password": "Rhythmic987123*."
   }
 }
