--- a/RhythmicRealm/RhythmicRealm.Service/RhythmicRealm.Service.csproj
+++ b/RhythmicRealm/RhythmicRealm.Service/RhythmicRealm.Service.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="Mapster" Version="7.4.0" />
   </ItemGroup>
 
